# data_integration_pipeline_streamlit

./: .cursorignore  .gitignore  404.html  Dockerfile  Dockerfile-airflow  LICENSE.md  Makefile  README.md  REPORT.md  docker-compose-airflow.yaml  docker-compose-build.yaml  docker-compose-es.yaml  docker-compose-minio.yaml  docker-compose-postgres.yaml  index.html  mkdocs.yml  pyproject.toml
.cursor/rules/: architecture.mdc  coding-style.mdc  configuration-and-secrets.mdc  error-handling-and-resilience.mdc  formatting.mdc  idempotency-and-concurrency.mdc  jobs-and-pipelines.mdc  observability.mdc  readme.mdc  testing.mdc  tooling.mdc
.github/workflows/: docs.yml
bronze/chunk_bronze/: index.html
bronze/download_bronze/: index.html
bronze/list_bronze_errors/: index.html
bronze/load_bronze/: index.html
bronze/process_bronze/: index.html
bronze/upload_bronze/: index.html
config/: airflow.cfg  airflow_connections.json  airflow_vars.json  dip_vars.json  postgresql.conf
config/env_files/: dev.env
dags/: dags.py
dev/: create_real_embeddings.py  profile_data_models.py  upload_test_data.py
docs/: index.md
docs/bronze/: chunk_bronze.md  download_bronze.md  list_bronze_errors.md  load_bronze.md  process_bronze.md  upload_bronze.md
docs/gold/: create_pg_report.md  streamlit.md  sync_elastic_search.md  sync_postgres.md
docs/silver/: audit_silver.md  integrate_silver.md  optimize_delta_tables.md  vacuum_delta_tables.md
gold/create_pg_report/: index.html
gold/streamlit/: index.html
gold/sync_elastic_search/: index.html
gold/sync_postgres/: index.html
scripts/: create-buckets.sh  load_dot_env_dev.sh  test_connections.py
search/: search_index.json
silver/audit_silver/: index.html
silver/integrate_silver/: index.html
silver/optimize_delta_tables/: index.html
silver/vacuum_delta_tables/: index.html
src/data_integration_pipeline/: cli.py  settings.py
src/data_integration_pipeline/gold/: readme.md
tests/: conftest.py  readme.md  test_bronze_integration.py  test_gold_integration.py  test_models.py  test_pipeline_integration.py  test_silver_integration.py
(+93 files in other folders)
