[project]
name = "data_integration_pipeline"
version = "1.0.0"
authors = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
maintainers = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]

# this should be separated into a per image group, e.g., for ER we need splink but not for the others
dependencies = [
    "retry",
    "pyarrow",
    "uuid6",
    "polars",
    "s3fs",
    "json-stream",
    "numpy",
    "click",
]


[project.optional-dependencies]
models = [
    "pydantic",
    "country_converter",
    "w3lib",
]
auditor = [
    "data_integration_pipeline[models]",
    "great_expectations",
    "pandas",
]
storage = [
    "data_integration_pipeline[models]",
    "deltalake",
    "psycopg[binary, pool]",
    # 8.17.2 is the current version in prod
    "elasticsearch>=8,<9",
]
embedding = [
    "sentence-transformers",
    # for the model jinaai/jina-embeddings-v5-text-nano
    "transformers>=4.57.0,<5.0.0",
    "peft>=0.15.2",
]
er-spark = [
    "data_integration_pipeline[storage]",
    "pyspark",
    "delta-spark",
]
er-duckdb = [
    "data_integration_pipeline[storage]",
    "duckdb",
]
streamlit = [
    "data_integration_pipeline[storage]",
    "streamlit",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "tests.py"]
markers = [
    "integration: requires Docker services (MinIO, PostgreSQL, Elasticsearch)",
]



[project.scripts]
dip = "data_integration_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_integration_pipeline"]



[project.urls]
Repository = "https://github.com/PedroMTQ/data_integration_pipeline_comp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 150
lint.select = ["E",  "W",  "F",  "I", "B"]
lint.ignore=["E501", "I001", "B006"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]



[tool.ruff.format]
quote-style = "single"
